v 3.0.0.2 update GunThreadManager #4007 +interface Sequencer